refactor: 将 I18n 资源文件从 Resources 目录移动到 Assets 目录,并更新所有引用
- 将 UIText 资源文件及其本地化文件从 Resources/I18n 移动到 Assets/I18n
- 更新所有模块中的命名空间引用从 ReQuantum.Resources.I18n 改为 ReQuantum.Assets.I18n
- 移除资源文件中的 emoji 前缀,简化错误提示文本
- 删除空的 MenuItem.cs 文件
- 更新项目文件中的资源文件路径配置
- 修正 EventPublisher 中的泛型参数命名

--- a/ReQuantum/Assets/I18n/UIText.zh-CN.resx
+++ b/ReQuantum/Assets/I18n/UIText.zh-CN.resx
@@ -210,8 +210,6 @@
   <data name="NotLoggedIn" xml:space="preserve">
     <value>用户未登录。</value>
   </data>
-  
-  <!-- Calendar Module -->
   <data name="Calendar" xml:space="preserve">
     <value>日历</value>
   </data>
@@ -324,13 +322,13 @@
     <value>Sat</value>
   </data>
   <data name="EventEndTimeBeforeStart" xml:space="preserve">
-    <value>❌ 结束时间不能早于或等于开始时间</value>
+    <value>结束时间不能早于或等于开始时间</value>
   </data>
   <data name="EventInPast" xml:space="preserve">
-    <value>⚠️ 你正在创建过去的日程</value>
+    <value>你正在创建过去的日程</value>
   </data>
   <data name="TodoInPast" xml:space="preserve">
-    <value>⚠️ 你正在创建过去的待办</value>
+    <value>你正在创建过去的待办</value>
   </data>
   <data name="YearMonthFormat" xml:space="preserve">
     <value>{0}年{1}月</value>
