--- a/ReQuantum/Assets/I18n/UIText.resx
+++ b/ReQuantum/Assets/I18n/UIText.resx
@@ -210,8 +210,6 @@
   <data name="NotLoggedIn" xml:space="preserve">
     <value>User is not logged in.</value>
   </data>
-  
-  <!-- Calendar Module -->
   <data name="Calendar" xml:space="preserve">
     <value>Calendar</value>
   </data>
@@ -324,13 +322,13 @@
     <value>Sat</value>
   </data>
   <data name="EventEndTimeBeforeStart" xml:space="preserve">
-    <value>❌ End time cannot be earlier than or equal to start time</value>
+    <value>End time cannot be earlier than or equal to start time</value>
   </data>
   <data name="EventInPast" xml:space="preserve">
-    <value>⚠️ You are creating an event in the past</value>
+    <value>You are creating an event in the past</value>
   </data>
   <data name="TodoInPast" xml:space="preserve">
-    <value>⚠️ You are creating a todo in the past</value>
+    <value>You are creating a todo in the past</value>
   </data>
   <data name="YearMonthFormat" xml:space="preserve">
     <value>{0}/{1}</value>
