feat: 增加了考试信息的获取功能，并且完成了考试信息在日历界面的显示。 To-do： 1. 增加PTA数据爬取 2. 将考试界面和日程页面合并，将考试信息获取按钮合并到课程获取按钮中 3. 在获取有效课程信息后，将调试页面移除

--- a/ReQuantum/Assets/I18n/UIText.resx
+++ b/ReQuantum/Assets/I18n/UIText.resx
@@ -336,4 +336,10 @@
   <data name="SyncCoursesZju" xml:space="preserve">
     <value>Sync ZJU</value>
   </data>
+  <data name="ExamsOnDate" xml:space="preserve">
+    <value>Exams - {0:MMM dd, yyyy}</value>
+  </data>
+  <data name="NoExams" xml:space="preserve">
+    <value>No exams on this date</value>
+  </data>
 </root>
