feat:新增便签墙功能（已去除）

--- a/ReQuantum/Assets/I18n/UIText.resx
+++ b/ReQuantum/Assets/I18n/UIText.resx
@@ -336,4 +336,7 @@
   <data name="SyncCoursesZju" xml:space="preserve">
     <value>Sync ZJU</value>
   </data>
+  <data name="NotesWall" xml:space="preserve">
+    <value>Notes Wall</value>
+  </data>
 </root>
