chore: 处理前端界面中按钮遮住字的情况

--- a/ReQuantum/Assets/I18n/UIText.zh-CN.resx
+++ b/ReQuantum/Assets/I18n/UIText.zh-CN.resx
@@ -336,15 +336,19 @@
   <data name="SyncCoursesZju" xml:space="preserve">
     <value>同步学在浙大</value>
   </data>
-<<<<<<< HEAD
-  <data name="NotesWall" xml:space="preserve">
-    <value>便签墙</value>
-=======
   <data name="RepeatWeekly" xml:space="preserve">
     <value>🔁 每周重复</value>
   </data>
   <data name="RepeatTimes" xml:space="preserve">
     <value>重复次数：</value>
->>>>>>> 786f8129a4ae58080b5a09cee52d9cb6e27f363b
+  </data>
+  <data name="PintiaLogin" xml:space="preserve">
+    <value>拼题A登录</value>
+  </data>
+  <data name="SyncCoursesTable" xml:space="preserve">
+    <value>同步课程表</value>
+  </data>
+  <data name="CourseSelection" xml:space="preserve">
+    <value>选课</value>
   </data>
 </root>
